<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddAlumndoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/etiqueta"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtNombreAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtApellidosAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/apelludos"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spCiclosAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/spciclos" />

    <RadioGroup
        android:id="@+id/rgGrupoAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbGrupoAAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupoa" />

        <RadioButton
            android:id="@+id/rbGrupoBAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupob" />

        <RadioButton
            android:id="@+id/rbGrupoCAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupoc" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:context=".AddAlumndoActivity">

        <Button
            android:id="@+id/btnCancelarAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnAceptarAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/crear" />

    </LinearLayout>

</LinearLayout>